hyperclicker/styles/hyperclicker-styles.css
/* ... */
main .game button:hover {
    background-color:var(--main-color);
    color:var(--bg-color);
    cursor:pointer;
}

main .game button:active {
	transform: scale(0.95, 0.95);
	transition-duration:0.05s;
}

main .game button.cannot_buy{
	color:var(--deactivated-glow-color);
	background:var(--deactivated-glow-color);
	text-shadow: var(--deactivated-glow-color) 0 0 0.75rem;
	border: 0.1rem solid var(--deactivated-glow-color);
	box-shadow: 0 0 0.75rem var(--deactivated-glow-color),
				inset 0 0 0.75rem var(--deactivated-glow-color);
}

main .game button.bought{
	color:var(--deactivated-color);
	background:var(--deactivated-glow-color);
	text-shadow: var(--deactivated-glow-color) 0 0 0.75rem;
	border: 0.1rem solid var(--deactivated-glow-color);
	box-shadow: 0 0 0.75rem var(--deactivated-glow-color),
				inset 0 0 0.75rem var(--deactivated-glow-color);
	pointer-events:none;
}

main .game .not_unlocked {
    display: none;
}

main .game .hidden {
    display: none;
}

main .game .upgrade_list .upgrade.hidden {
    display: none;
}

main .game .upgrade_list .upgrade.not_unlocked {
    display: none;
}

main .game .upgrade_list h3 {
	font-family:"spacemono", "Courier New", monospace;
	font-weight:normal;
	font-size: 1.25rem;
	text-align: left;
	vertical-align:top;
	margin:0 0 0.5rem 0;
}

main .game .main_panel p.cost {
	color:var(--main-color);
    font-family:"spacemono", "Courier New", monospace;
    text-align:center;
    text-shadow: var(--main-text-glow-color) 0 0 0.75rem;
	margin-bottom: 0.25rem;
}

main .game .main_panel span.suffix {
	color:var(--main-color);
    font-family:"spacemono", "Courier New", monospace;
    text-align:center;
    text-shadow: var(--main-text-glow-color) 0 0 0.75rem;
}

main .game .purchased_upgrade_list {
	display:flex;
	gap:0.5rem;
	flex-direction:column;
}

main .game .purchased_upgrade_list .purchased_upgrade {
	background:var(--text-bg-color);
	border:0.1rem solid var(--text-color);
	box-shadow: 0 0 0.75rem var(--text-glow-color),
		inset 0 0 0.75rem var(--text-glow-color);
	padding:0.5rem;
}

main .game .purchased_upgrade_list h3 {
	font-size: 1.25rem;
	font-weight:normal;
	margin:0;
}

main .game .purchased_upgrade_list .description {
	font-size: 0.875rem;
	font-weight:normal;
}

main .game .process_panel {
	display:flex;
	flex-direction:row;
	gap:1rem;
}

main .game .cores_panel {
	width:15%;
	padding: 1rem;
	background-color: var(--main-bg-color);
	border: 0.1rem solid var(--main-color);
	box-shadow: 0 0 0.75rem var(--main-box-glow-color),
		inset 0 0 0.75rem var(--main-box-glow-color);
}

main .game .cores_panel h2 {
	margin:1rem;
}

main .game .cores_panel h4 {
	font-size: 1.25rem;
	font-weight: normal;
	margin: 0;
}

main .game .cores_panel .wrapper_bar {
	width: 100%;
	height: 1rem;
	border: 0.1rem solid var(--main-color);
	box-shadow: 0 0 0.75rem var(--main-box-glow-color),
		inset 0 0 0.75rem var(--main-box-glow-color);
}

main .game .cores_panel .wrapper_bar .inner_bar {
	margin:0;
	padding:0;
	display:inline-block;
	transition-timing-function: ease-out;
	transition-duration: 0.2s;
	height:1rem;
	width:0%;
	background-color: var(--main-color);
}

main .game .process_list {
	width:85%;
	display:flex;
	flex-direction:column;
	align-items:stretch;
	gap: 1rem;
}

main .game .process_list .process {
	display:flex;
	flex-direction:row;
	justify-content:space-between;
	gap:0.5rem;
	padding: 0.5rem;
	background:var(--text-bg-color);
	border: 0.1rem solid var(--text-color);
	box-shadow: 0 0 0.75rem var(--text-glow-color),
		inset 0 0 0.75rem var(--text-glow-color);
}

main .game .process_list .process.not_unlocked {
	display:none;
}

main .game .process_panel h3 {
	font-family:"spacemono", "Courier New", monospace;
	font-weight:normal;
	font-size: 1.5rem;
	text-align: left;
	vertical-align:top;
	margin:0 0 0.5rem 0;
}

main .game .process_list .process .button_info {
	font-size: 0.875rem;
}

main .game .process_list .process .button_title {
	font-size: 1.25rem;
}

main .game .process_list .process .process_buttons {
	display:flex;
	flex-direction:row;
	justify-content:flex-end;
	gap: 0.5rem;
	width:50%;
}

main .game .process_list .process .process_buttons button {
	font-size: 1rem;
	width:33%;
}

main .game .process_list .process .process_buttons button:active {
	transform: scale(0.95, 0.95);
	transition-duration:0.05s;
}

main .game .process_list .process .process_info {
	display:flex;
	flex-grow:1;
	width:50%;
	flex-direction:column;
}

main .game .process_list .process h3 {
	margin:0;
	font-size: 2rem;
	text-align:left;
	margin-left: 1rem;
}

main .game .process_list .process .description {
	font-size: 0.75rem;
	margin-left: 1rem;
}

main .game .process_list .process .process_info p {
	margin-left: 1rem;
}

main .game .architectures_panel .max_enabled_display {
	text-align:center;
	font-size:1.5rem;
	margin-bottom:1rem;
}

main .game .architectures_panel .architecture_list {
	display: flex;
	flex-direction:column;
	justify-content:flex-start;
	align-items:stretch;
	gap:1rem;
}

main .game .architectures_panel .architecture_list .no_hypermods_display {
	text-align:center;
}

main .game .architectures_panel .architecture_list .hypermod {
	padding:1rem;
	text-align: left;
	border: 0.1rem solid var(--text-color);
	box-shadow: 0 0 0.75rem var(--text-glow-color),
		inset 0 0 0.75rem var(--text-glow-color);
	background: var(--text-bg-color);

	transition-duration:0.5s;
}

main .game .architectures_panel .architecture_list .hypermod.enabled {
	border: 0.1rem solid var(--main-color);
	box-shadow: 0 0 0.75rem var(--main-box-glow-color),
		inset 0 0 0.75rem var(--main-box-glow-color);
	background: var(--main-bg-color);

	transition-duration:0.5s;
}

main .game .architectures_panel .architecture_list .hypermod h3 {
	font-weight:normal;
	font-size:2rem;
	margin:0 0 0.25rem 0;
}

main .game .architectures_panel .architecture_list .hypermod .status_display {
	margin-top:1rem;
}
/* ... */

